# sf-schema-intelligence

./: .gitignore  CHEATSHEET.md  LICENSE  README.md  cli.py  pyproject.toml
scripts/: sf_schema_sync.py
src/core/: diff.py  er_diagram.py  graph.py  workbook.py
src/data/: schema_cache.py  sf_api.py
src/mcp/: server.py
tests/: conftest.py  test_diff.py  test_diff_report.py  test_er_diagram.py  test_graph.py  test_multi_org.py  test_refresh_and_key_fields.py  test_workbook.py
tests/fixtures/snapshot_v1/: Account.json  HealthCloudGA__CarePlanGoal__c.json  HealthCloudGA__CarePlan__c.json  HealthCloudGA__CareProgram__c.json  HealthCloudGA__CareTeamMember__c.json  _index.json  _meta.json
tests/fixtures/snapshot_v2/: Account.json  Contact.json  HealthCloudGA__CareMetric__c.json  HealthCloudGA__CarePlan__c.json  _index.json  _meta.json
